[gd_scene load_steps=8 format=3 uid="uid://vdeh2o6vmudm"]

[ext_resource type="Script" path="res://Mob.gd" id="1_g72op"]
[ext_resource type="Texture2D" uid="uid://d0yq6ui7kli14" path="res://art/enemySprites/enemy1Turnaround/Enemy1Turnaround0000.png" id="2_evkpu"]
[ext_resource type="Texture2D" uid="uid://bk2lhr7tribj3" path="res://art/enemySprites/enemy1Turnaround/Enemy1Turnaround0001.png" id="3_b7spb"]
[ext_resource type="Texture2D" uid="uid://brngbwcherx" path="res://art/enemySprites/enemy1Turnaround/Enemy1Turnaround0002.png" id="4_0edy8"]
[ext_resource type="Texture2D" uid="uid://dg3t62ia0fwji" path="res://art/enemySprites/enemy1Turnaround/Enemy1Turnaround0003.png" id="5_ku6re"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6vrts"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_evkpu")
}, {
"duration": 1.0,
"texture": ExtResource("3_b7spb")
}, {
"duration": 1.0,
"texture": ExtResource("4_0edy8")
}, {
"duration": 1.0,
"texture": ExtResource("5_ku6re")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3wq5y"]
radius = 20.0998

[node name="Mob" type="RigidBody2D" groups=["mobs"]]
collision_layer = 3
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_g72op")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_6vrts")
animation = &"walk"
frame_progress = 0.281954

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_3wq5y")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
